# CreditOpt

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: actionlint.yml  ci.yml  deploy.yml  diag.yml  fpt-benchmark.yml
apps/web/: package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
deck/: README.md  check_final.py  compliance.py  content.py  theme.py
deck/tests/: test_compliance.py  test_content.py
deploy/terraform/: README.md  outputs.tf  providers.tf  variables.tf  versions.tf
docs/: AGENT_ARCHITECTURE.md  DECISION_LOG.md  DEPLOYMENT_RUNBOOK.md  DEPLOYMENT_SECRETS.md  HACKATHON_DEMO_ACTIVATION.md  OPEN_QUESTIONS.md  PROJECT_CONTEXT.md  SOLUTION_DESCRIPTION.md  TECHNICAL_DIRECTION.md
docs/benchmarks/: README.md  reasoning-DeepSeek-V4-Flash-evidence.md
scripts/: build_fpt_benchmark_record.py  provision_supabase_storage.py  smoke_cloud.sh  smoke_fpt.py  smoke_live_demo.sh
services/api/: Dockerfile
shared/: synthetic-notice.json
supabase/: config.toml
supabase/migrations/: 202607170001_extensions_security.sql  202607170002_cases_assignments_audit.sql  202607170003_upload_intents_storage_rls.sql  202607170004_documents_facts_edges.sql  202607170005_tasks_checkpoints_queue.sql  202607170006_conflicts_gaps_handoffs.sql  202607170007_retrieval_pgvector.sql  202607170008_financing_requests.sql  202607170009_api_role_rls.sql  202607170010_upload_intents_completion.sql  202607180001_orchestration_graph_gates.sql  202607180002_planner_proposals_queue.sql  202607180006_credit_ops.sql  (+15 more)
(+471 files in other folders)
